Fix top nav wrapping on small screens
Previously, the searchbar was jumping onto a new line at small sizes (like the Moto G4)
-Right now it gets too small when the menu is open, but we'll fix that in the next commit

--- a/www/ifdb.css
+++ b/www/ifdb.css
@@ -205,10 +205,6 @@ div.topctl table tr td {
     margin: 0 0 0 0;
     padding: 0 1em 0 1em;
 }
-.topctl form {
-    margin: 0px;
-    display: inline-block;
-}
 
 .main-nav form {
     margin: 0.25em 0.75em 0.25em 0.75em;
@@ -224,6 +220,7 @@ div.topctl table tr td {
     border: none;
     padding-left: 0.5em;
     border-radius: 1em 0 0 1em;
+    width: 100%;
 }
 
 .searchbar-wrapper > button {
@@ -250,6 +247,12 @@ div.topctl table tr td {
 
 #main-nav-wrapper{
     padding: 0em 1em 0em 1em;
+    display: flex;
+    flex-wrap: wrap;
+}
+.nav-right{
+   display: flex;
+   align-items: center;
 }
 
  #mobile-menu-toggle-button + .main-nav {
